docs: update .env.example

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,1 +1,13 @@
 PORT=3000
+JWT_ENCODE_ALGORITHM=RS256
+SALT_ROUNDS=10
+POSTGRES_USER=dev_user
+POSTGRES_PASSWORD=dev_password
+POSTGRES_DB=dev_database
+; POSTGRES_PORT=5433
+; POSTGRES_HOST=localhost
+POSTGRES_HOST=rest_db
+POSTGRES_PORT=5432
+REDIS_HOST=rest_redis
+REDIS_PORT=6379
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
