--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bondflix-rest-api",
+  "name": "boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "./app/index.ts",
