--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -9,5 +9,17 @@
         "sourceType": "module"
     },
     "rules": {
-    }
+        "indent": ["error", 4],
+        "@typescript-eslint/indent": ["error", 4],
+        "@typescript-eslint/ban-ts-comment": [
+            "error",
+            {
+                "ts-ignore": false,
+                // "ts-ignore": "allow-with-description",
+                "ts-expect-error": false,
+                "ts-nocheck": true,
+                "ts-check": false
+            }
+        ]
+    }   
 }
