--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
     "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
+    "@types/express-rate-limit": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.6",
     "@types/redis": "^4.0.11",
@@ -40,6 +41,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
     "redis": "^4.6.10",
     "zod": "^3.22.4"
