fix: dockerfile, compose, start script include migrating prisma

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - ./src:/app
     ports:
       - "3000:3000"
-    command: yarn start
+    command: /scripts/start.sh
     depends_on:
       - rest_db
     networks:
