--- a/src/package.json
+++ b/src/package.json
@@ -2,13 +2,14 @@
   "name": "boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "./app/index.ts",
+  "main": "./app/server.ts",
   "scripts": {
     "build": "tsc",
     "start": "nodemon -L",
     "migrate": "npx prisma migrate dev",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "lint:fix": "eslint . --ext .ts --fix",
+    "test": "jest --detectOpenHandles --forceExit"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +20,11 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
     "@types/express-rate-limit": "^6.0.0",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.6",
     "@types/redis": "^4.0.11",
+    "@types/supertest": "^6.0.1",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.0.1",
@@ -29,8 +32,11 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prisma": "^5.4.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "*"
   },
