--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,15 +34,15 @@ jobs:
         node-version: '20'
     
     - name: Set up .env file
-      run: cp ./src/.env.example .env
+      run: cp .env.example .env
       working-directory: ./src
     
     - name: Set up public key file
-      run: cp ./src/public.key.example public.key
+      run: cp .public.key.example public.key
       working-directory: ./src
     
     - name: Set up private key file
-      run: cp ./src/private.key.example private.key
+      run: cp .private.key.example private.key
       working-directory: ./src
       
     - name: Install dependencies
