--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,11 +12,11 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      redis:
+      rest_redis:
         image: redis
         ports:
           - 6379:6379
-      postgres:
+      rest_db:
         image: postgres
         env:
           POSTGRES_USER: dev_user
