--- a/src/.env.example
+++ b/src/.env.example
@@ -4,10 +4,9 @@ SALT_ROUNDS=10
 POSTGRES_USER=dev_user
 POSTGRES_PASSWORD=dev_password
 POSTGRES_DB=dev_database
-; POSTGRES_PORT=5433
-; POSTGRES_HOST=localhost
 POSTGRES_HOST=rest_db
 POSTGRES_PORT=5432
 REDIS_HOST=rest_redis
 REDIS_PORT=6379
+REDIS_PASSWORD=
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
