--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,11 +13,11 @@ jobs:
 
     services:
       rest_redis:
-        image: redis:7.2.1
+        image: redis
         ports:
           - 6379:6379
       rest_db:
-        image: postgres:16-alpine
+        image: postgres
         env:
           POSTGRES_USER: dev_user
           POSTGRES_PASSWORD: dev_password
@@ -34,9 +34,7 @@ jobs:
         node-version: '20'
     
     - name: Set up .env file
-      run: |
-        cp .env.example .env
-        echo "DATABASE_URL=postgresql://dev_user:dev_password@rest_db:5432/dev_database" >> .env
+      run: cp .env.example .env
       working-directory: ./src
     
     - name: Set up public key file
@@ -49,22 +47,6 @@ jobs:
       
     - name: Install dependencies
       run: yarn install
-      working-directory: ./src
-
-    - name: Get rest_db logs
-      if: failure()
-      run: docker logs rest_db
-
-    - name: Wait for DB
-      run: |
-        until pg_isready -h rest_db -p 5432; do
-          echo "Waiting for DB to be ready..."
-          sleep 2
-        done
-      working-directory: ./src
-
-    - name: Run Prisma Migrations
-      run: npx prisma migrate deploy
       working-directory: ./src
     
     - name: Run tests
