--- a/src/.env.example
+++ b/src/.env.example
@@ -9,4 +9,4 @@ POSTGRES_PORT=5432
 REDIS_HOST=rest_redis
 REDIS_PORT=6379
 REDIS_PASSWORD=
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+# DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
