--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -14,6 +14,9 @@
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true
   },
-  "include": ["app/**/*.ts"],
+  "include": [
+    "app/**/*.ts",
+    "jest.config.js"
+  ],
   "exclude": ["node_modules"]
 }
