--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -71,6 +71,9 @@ jobs:
       run: npx prisma db push
       working-directory: ./src
 
+    - name: Install Dockerize
+      run: sudo wget https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64-v0.6.1.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-v0.6.1.tar.gz && rm dockerize-linux-amd64-v0.6.1.tar.gz
+
     - name: Wait for Redis to start
       run: dockerize -wait tcp://localhost:6379 -timeout 1m
 
